// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should return variant when equal weight on 1,1,1 1`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 1,1,1 2`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 1,1,1 3`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 33,33,33 1`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 33,33,33 2`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant1",
  "payload": {
    "type": "string",
    "value": "val1",
  },
}
`;

exports[`should return variant when equal weight on 33,33,33 3`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 100,100,100 1`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 100,100,100 2`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant3",
  "payload": {
    "type": "string",
    "value": "val3",
  },
}
`;

exports[`should return variant when equal weight on 100,100,100 3`] = `
{
  "enabled": true,
  "featureEnabled": true,
  "feature_enabled": true,
  "name": "variant2",
  "payload": {
    "type": "string",
    "value": "val2",
  },
}
`;
